--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- 2. Image and Link -->
     <h2>My Photo & Link</h2>
-    <img src="01.jpg" alt="Profile Image">
+    <img src="Anime Medium Hair.jpeg" alt="Profile Image">
     <br>
     <a href="https://www.google.com" target="_blank">Visit Google</a>
 
@@ -69,3 +69,4 @@
 
 </body>
 </html>
+
